kubernetes/apps/paperless/postgres/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: paperless
spec:
  selector:
    app: postgres
  ports:
    - port: 5432
